# when-gnns-beat-mlps

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: artifacts-README.md
config/: common.yaml  graph.yaml  link.yaml  node.yaml
data/: data-README.md
reports/data/graph/: dataset.json  splits.json
reports/data/link/: dataset.json  splits.json
reports/data/node/: dataset.json  splits.json
reports/evaluation/graph/: results.json
reports/evaluation/link/: results.json
reports/evaluation/node/: results.json
reports/training/graph/baseline/: report_seed_01.json  report_seed_07.json  report_seed_11.json  report_seed_13.json  report_seed_29.json  report_seed_37.json  report_seed_41.json  report_seed_47.json  report_seed_59.json  report_seed_66.json
reports/training/graph/gin/: report_seed_01.json  report_seed_07.json  report_seed_11.json  report_seed_13.json  report_seed_29.json  report_seed_37.json  report_seed_41.json  report_seed_47.json  report_seed_59.json  report_seed_66.json
reports/training/link/baseline/: report_seed_01.json  report_seed_07.json  report_seed_11.json  report_seed_13.json  report_seed_29.json  report_seed_37.json  report_seed_41.json  report_seed_47.json  report_seed_59.json  report_seed_66.json
reports/training/link/gae/: report_seed_01.json  report_seed_07.json  report_seed_11.json  report_seed_13.json  report_seed_29.json  report_seed_37.json  report_seed_41.json  report_seed_47.json  report_seed_59.json  report_seed_66.json
reports/training/node/baseline/: report_seed_01.json  report_seed_07.json  report_seed_11.json  report_seed_13.json  report_seed_29.json  report_seed_37.json  report_seed_41.json  report_seed_47.json  report_seed_59.json  report_seed_66.json
reports/training/node/gcn/: report_seed_01.json  report_seed_07.json  (+8 more)
src/gnnbench/: __init__.py  config.py  io.py  seeds.py
src/gnnbench/data/: download.py  splits.py
src/gnnbench/evaluation/: figures.py  graph.py  helpers.py  link.py  node.py
src/gnnbench/models/: __init__.py  decoder.py  gcn.py  gin.py  mlp.py
src/gnnbench/training/: graph.py  link.py  node.py
tests/: test_helpers.py  test_models.py  test_package.py  test_seeds.py  test_splits.py
